stop vertically stretching npc entries; relabel npc.show as "enabled"

--- a/src/npc-list.css
+++ b/src/npc-list.css
@@ -15,6 +15,7 @@
 }
 
 #npc-list>ul {
+    align-content: start;
     display: grid;
     grid-gap: 0.25rem;
     grid-template-columns: 1fr;
